# wtm_bot

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py
src/wtm_bot/: discord_bot.py  table.py  wtm.py
